# StoryGraph

./: CI_INTEGRATION_PLAN.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DEEP_AUDIT_REPORT.md
.github/workflows/: ci.yml
docs/: UI_UX_AUDIT_REPORT.md  workflow_pipeline.md
docs/design/: SCENE_SEPARATION_DESIGN.md
editor/: CMakeLists.txt
editor/resources/: editor_resources.qrc
editor/src/: asset_pipeline.cpp  asset_preview.cpp  build_size_analyzer.cpp  build_system.cpp  editor_runtime_host_inspection.cpp  editor_runtime_host_runtime.cpp  editor_runtime_host_save.cpp  editor_settings.cpp  event_bus.cpp  hotkeys_manager.cpp  inspector_binding.cpp  project_integrity.cpp  project_json.cpp  project_manager.cpp  scene_document.cpp  settings_registry.cpp  voice_manager.cpp
editor/src/guided_learning/: anchor_registry.cpp  help_overlay.cpp  tutorial_manager.cpp  tutorial_subsystem.cpp  tutorial_types.cpp
editor/src/mediators/: property_mediator.cpp  selection_mediator.cpp
editor/src/qt/: editor_capabilities_check.cpp  main.cpp  navigation_location.cpp  nm_bezier_curve_editor_dialog.cpp  nm_color_dialog.cpp  nm_dialogs_detail.cpp  nm_dialogs_detail.hpp  nm_dock_panel.cpp  nm_file_dialog.cpp  nm_hotkeys_dialog.cpp  nm_icon_manager.cpp  nm_input_dialog.cpp  nm_main_window.cpp  nm_main_window_connections.cpp  nm_main_window_layout.cpp  nm_main_window_menu.cpp  nm_main_window_panels.cpp  nm_main_window_runtime.cpp  nm_message_dialog.cpp  nm_new_project_dialog.cpp  nm_play_mode_controller.cpp  nm_settings_dialog.cpp  nm_style_manager.cpp  nm_style_manager_stylesheet.cpp  nm_undo_manager.cpp  nm_welcome_dialog.cpp  qt_event_bus.cpp
editor/src/qt/panels/: nm_console_panel.cpp  (+45 more)
engine_core/: CMakeLists.txt
engine_core/src/audio/: audio_manager.cpp  audio_recorder.cpp  voice_manifest.cpp
engine_core/src/core/: application.cpp  file_system.cpp
engine_core/src/renderer/: camera.cpp  font.cpp  renderer.cpp  texture.cpp
engine_core/src/resource/: resource_manager.cpp
engine_core/src/runtime/: config_manager.cpp  game_launcher.cpp  game_settings.cpp
engine_core/src/save/: save_manager.cpp
engine_core/src/scene/: scene_graph.cpp  scene_graph_detail.cpp  scene_graph_detail.hpp  scene_inspector.cpp  scene_object_background.cpp  scene_object_base.cpp  scene_object_character.cpp  scene_object_choice.cpp  scene_object_dialogue.cpp  scene_object_handle.cpp  scene_object_properties.cpp  transition.cpp
engine_core/src/scripting/: compiler.cpp  dialogue_localization.cpp  interpreter.cpp  ir_conversion.cpp  ir_visual_graph.cpp  lexer.cpp  parser.cpp  script_runtime.cpp  validator.cpp  vm.cpp  vm_debugger.cpp
engine_core/src/vfs/: multi_pack_manager.cpp  pack_decryptor.cpp  pack_integrity_checker.cpp  pack_reader.cpp  pack_security.cpp  pack_security_detail.hpp  secure_pack_reader.cpp
examples/: timeline_animation_example.cpp
experiments/: issue-28-timeline-fix-summary.md  issue-40-analysis.md  issue_80_analysis.md  issue_80_repro.cpp  test_choice_rendering.cpp  test_speaker_identifier_validation.cpp
runtime/: CMakeLists.txt
runtime/src/: game_launcher_main.cpp
tests/: CMakeLists.txt
tests/integration/: test_playback_source_mode.cpp  test_project_json.cpp  test_scene_id_picker.cpp  test_scene_template_manager.cpp  test_scene_validation.cpp  test_scene_workflow.cpp  test_ui_panel_features.cpp  test_voice_manager.cpp
tests/unit/: test_audio_manager.cpp  test_audio_recorder.cpp  test_benchmarks.cpp  test_build_system.cpp  test_division_safety.cpp  test_event_bus.cpp  test_gizmo_dpi_scaling.cpp  test_gizmo_memory.cpp  test_lexer.cpp  test_pack_reader.cpp  test_parser.cpp  test_recording_callback_marshaling.cpp  test_recording_panel_thread_safety.cpp  test_scene_graph.cpp  test_scene_graph_deep.cpp  test_selection_mediator.cpp  test_story_graph.cpp  test_texture_loading.cpp  test_validator.cpp  test_vfs_pack_security.cpp  test_vm.cpp  test_voice_manifest.cpp
(+81 files in other folders)
